--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@fastify/static": "^8.2.0",
+    "@prisma/client": "^6.15.0",
     "axios": "^1.9.0",
     "fastify": "^5.3.3",
     "graphql-request": "^7.2.0"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^22.15.24",
     "nodemon": "^3.1.10",
+    "prisma": "^6.15.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
