--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fastify/static": "^8.2.0",
     "@prisma/client": "^6.15.0",
     "axios": "^1.9.0",
+    "csvtojson": "^2.0.13",
     "fastify": "^5.3.3",
     "graphql-request": "^7.2.0"
   },
