--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "axios": "^1.9.0",
     "csvtojson": "^2.0.13",
     "fastify": "^5.3.3",
-    "graphql-request": "^7.2.0"
+    "graphql-request": "^7.2.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^22.15.24",
